--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -29,7 +29,7 @@ engaged.-->
         <div class="hero-content">
             <h2>Discover the Power of Emotional Intelligence</h2>
             <p>Empowering kids to learn, grow, and thrive</p>
-            <a href="#activities" class="btn">Get Started</a>
+            <a href="activities.html" class="btn">Get Started</a>
         </div>
     </section>
 
@@ -37,30 +37,34 @@ engaged.-->
         <div class="container">
             <h2>About EmotiLearnHub</h2>
             <p>EmotiLearnHub is an interactive educational platform designed to help children develop emotional intelligence skills through engaging activities, games, and resources.</p>
-            <a href="#activities" class="btn">Explore Activities</a>
+            <a href="about.html" class="btn">Read About Us!</a>
         </div>
     </section>
 
-    <section id="activities">
+    <section id="how-to">
         <div class="container">
             <h2>How to use Eomjication</h2>
             <p>Our platform offers a variety of fun and interactive activities that foster emotional intelligence, creativity, and critical thinking skills. Start here to learn how to use our platform!</p>
-            <a href="#resources" class="btn">Discover Resources</a>
+            <a href="resources.html" class="btn">Discover Resources</a>
         </div>
+
     </section>
 
-    <section id="resources">
+    <section id="learning-modules">
         <div class="container">
             <h2>Learning Modules</h2>
             <p>Access educational articles, videos, and resources to support children's emotional intelligence development both in and out of the classroom.</p>
-            <a href="#parents-teachers" class="btn">For Parents & Teachers</a>
+            <a href="activities.html" class="btn">Explore Activities</a>
         </div>
+
     </section>
 
     <section id="parents-teachers">
         <div class="container">
             <h2>For Parents & Teachers</h2>
             <p>Find tips, guidance, and resources to support children's emotional intelligence development at home and in the classroom.</p>
+            <a href="admin.html" class="btn">For Parents & Teachers</a>
+
         </div>
     </section>
 
