--- a/templates/activities.html
+++ b/templates/activities.html
@@ -20,6 +20,7 @@
     </header>
 
     <section id="resources">
+        <!-- Div for imaging -->
         <div class="container">
             <h1>Webcam Emotion Analysis</h1>
                 <video id="videoElement" autoplay></video>
@@ -28,6 +29,7 @@
             <button id="startCapture">Start Capture</button>
             <button id="stopCapture">Stop Capture</button>
         </div>
+        <!-- Div end -->
         <div class="container">
             <h2>Learning Modules</h2>
             <p>Get started by accessing the content below:</p>
